增加 sequelize 模块支持

--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -9,15 +9,28 @@ brew install mysql
 ### 进入数据库
 `mysql -u root -p`
 
-### 创建数据库
+### 初始化数据库和 Migrations
 
-`create database king_mall;`
-mysql -u root -e 'CREATE DATABASE IF NOT EXISTS `king_mall`;'
+```
+    CREATE DATABASE IF NOT EXISTS `king_mall`;
+    CREATE DATABASE IF NOT EXISTS `king_mall_unittest`;
+    CREATE DATABASE IF NOT EXISTS `king_mall_production`;
+```
 
 ### 使用数据库
-`use king_mall;`
+`use king-mall;`
  
 ### 显示表 
 `show tables;`
 
+
+
+### 安装 sequelize-cli
+`npm install --save-dev sequelize-cli`
+
+### 初始化 Migrations 配置文件和目录
+```
+npx sequelize init:config
+npx sequelize init:migrations
+```
 
