--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -34,3 +34,5 @@ npx sequelize init:config
 npx sequelize init:migrations
 ```
 
+###  Migration 文件来创建我们的一个 users
+npx sequelize migration:generate --name=init-users
