删除 product 先判断是否存在 增加格式化vscode 支持

--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -36,3 +36,7 @@ npx sequelize init:migrations
 
 ###  Migration 文件来创建我们的一个 users
 npx sequelize migration:generate --name=init-users
+
+
+### 执行 migrate 进行数据库变更
+`npx sequelize db:migrate`
