数据库sequelize说米ing

--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -1,15 +1,22 @@
 ### mac 安装数据库
-`
-brew search mysql
-brew install mysql
-`
+
+`brew search mysql brew install mysql`
+
 ### 设置数据库
+
 `mysql_secure_installation`
 
 ### 进入数据库
+
 `mysql -u root -p`
 
 ### 初始化数据库和 Migrations
+
+#### 创建数据库命令
+
+`npx sequelize db:create --env=development`
+
+or 手动创建
 
 ```
     CREATE DATABASE IF NOT EXISTS `king_mall`;
@@ -18,25 +25,43 @@ brew install mysql
 ```
 
 ### 使用数据库
+
 `use king-mall;`
- 
-### 显示表 
+
+### 显示表
+
 `show tables;`
 
-
-
 ### 安装 sequelize-cli
+
 `npm install --save-dev sequelize-cli`
 
 ### 初始化 Migrations 配置文件和目录
+
 ```
 npx sequelize init:config
 npx sequelize init:migrations
 ```
 
-###  Migration 文件来创建我们的一个 users
+### Migration 文件来创建我们的一个 users
+
 npx sequelize migration:generate --name=init-users
 
+### 创建 model 命令
+
+-   创建 products
+    `npx sequelize-cli model:generate --name product --attributes title:string,category:integer,pic_url:string,detail:text,primary_pic_url:string,price:decimal,exclusive_price:decimal,volume:integer,sell_volume:string,is_hot:boolean,is_new:boolean,is_on_sale:boolean,sort_order:integer`
+
+-   创建 users
+    `npx sequelize-cli model:generate --name user --attributes name:string,age:integer,avatar:string,sort_order:integer`
+
+### 修改主键、调整类型
+
+```js
+id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true }
+```
 
 ### 执行 migrate 进行数据库变更
+
+`npx sequelize db:migrate:undo`
 `npx sequelize db:migrate`
