--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -61,7 +61,18 @@ npx sequelize migration:generate --name=init-users
 id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true }
 ```
 
-### 执行 migrate 进行数据库变更
+### 此命令将还原最近的迁移
 
 `npx sequelize db:migrate:undo`
+
+### 执行 migrate 进行数据库变更
+
 `npx sequelize db:migrate`
+
+### 撤消所有迁移来恢复到初始状态
+
+`npx sequelize-cli db:migrate:undo:all`
+
+### 传递其名称来恢复为特定的迁移。
+
+`npx sequelize-cli db:migrate:undo:all --to XXXXXXXXXXXXXX-create-posts.js`
