sequelize db:migrate model

--- a/docs/数据库安装与使用.md
+++ b/docs/数据库安装与使用.md
@@ -18,7 +18,7 @@
 
 or 手动创建
 
-```
+```sql
     CREATE DATABASE IF NOT EXISTS `king_mall`;
     CREATE DATABASE IF NOT EXISTS `king_mall_unittest`;
     CREATE DATABASE IF NOT EXISTS `king_mall_production`;
